UF-8743: Fixes various sonar issues